fix: overflow-y

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -2,17 +2,16 @@
 
 body {
     background-color: #434343;
-    overflow-y: hidden;
 }
 
 .wrapper {
     height: 100vh;
     width: 100%;
+    overflow-y: auto;
 }
 
 .container {
     width: 90%;
     height: calc(100vh - 10vh);
-    margin: 0 auto;
-    overflow-y: auto;
+    margin: 100px auto;
 }
